--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,33 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <header>TIC TAC TOE</header>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="tictactoe.css">
 
+</head>
+
+<body>
     <div class="container">
-        <div class="row">
-            <div class="col">
-                1
-            </div>
-            <div class="col">
-                2
-            </div>
-            <div class="col">
-                3
-            </div>
+        <div class="text-center my-5">
+            <h1>TIC-TAC-TOE</h1>
+            <hr />
         </div>
     </div>
 
 
-    <script src="node_modules/bootstrap/dist/css/bootstrap-grid.css.map"></script>
+    <div class="container align-items-center">
+        <div class="row align-items-start">
+            <div class="col" id="topLeft">
+                <div class="p-5 border bg-light">
+                    top left
+                </div>
+            </div>
+            <div class="col" id="topCenter">
+                <div class="p-5 border bg-light">
+                    top center
+                </div>
+            </div>
+            <div class="col" id="topRight">
+                <div class="p-5 border bg-light">
+                    top right
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col" id="middleLeft">
+                <div class="p-5 border bg-light">
+                    middle left
+                </div>
+            </div>
+            <div class="col" id="middleCenter">
+                <div class="p-5 border bg-light">
+                    middle center
+                </div>
+            </div>
+            <div class="col" id="middleRight">
+                <div class="p-5 border bg-light">
+                    middle right
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-end">
+            <div class="col" id="bottomLeft">
+                <div class="p-5 border bg-light">
+                    bottom left
+                </div>
+            </div>
+            <div class="col" id="bottomCenter">
+                <div class="p-5 border bg-light">
+                    bottom center
+                </div>
+            </div>
+            <div class="col" id="bottomRight">
+                <div class="p-5 border bg-light">
+                    bottom right
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="tictactoe.css"></script>
     <script src="tictactoe.js"></script>
 </body>
+
 </html>
